--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
     <div class="container">
       <div class="row justify-content-center text-center">
         <div class="col-md-7">
-          <h1 class="heading gsap-reveal-hero mb-3"><strong>dATA made simple<span class="text-primary">.</span> Portfolio</strong></h1>
+          <h1 class="heading gsap-reveal-hero mb-3"><strong>dATA made simple<span class="text-primary">.</span> and good looking</strong></h1>
           <h2 class="subheading gsap-reveal-hero mb-4">
-            Quelques examples data analysis and visualisation projects<strong>Untree.co</strong>.
+            Quelques examples de mes projets d'analyse et de visualisation de données. <strong></strong>
           </h2>
          <!--  <p class="gsap-reveal-hero"><a href="https://untree.co/" target="_blank" class="btn btn-outline-black">More free templates here</a></p>   -->
         </div>
@@ -219,6 +219,7 @@
             </a>
           </div>
 
+          <!-- more stuff to come in my portfolio
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
             <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
               <div class="overlay">
@@ -283,7 +284,7 @@
               <img src="images/img_2.jpg" class="lazyload  img-fluid" alt="Images" />
             </a>
           </div>
-
+-->
 
         </div>
       </div>
