--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
             <p class="gsap-reveal-hero">Je combine cette solide expérience opérationnelle avec une expertise technique approfondie acquise par une formation ciblée sur les outils analytiques modernes : Python, SQL, Pandas et Power BI.</p>
 
-            <p class="gsap-reveal-hero">Ma véritable passion ? Révéler les histoires cachées derrière les chiffres. Mon objectif est de transformer des décennies de données business en insights stratégiques actionnables. Je suis prêt à relever vos défis analytiques en m'appuyant sur cette double compétence unique : une vision métier globale et une maîtrise technique de l'analyse de données.</p>
+            <p class="gsap-reveal-hero"><strong>Ma véritable passion ? Révéler les histoires cachées derrière les chiffres.</strong> Derrière chaque tableau, chaque graphique, se cachent des insights précieux.  Je suis prêt à relever vos défis analytiques en m'appuyant sur cette double compétence : une <strong>vision métier globale</strong> et une <strong>maîtrise technique</strong> de l'analyse de données.</p>
 
             <p class="gsap-reveal-hero mb-5"></p>
  
@@ -461,13 +461,13 @@
         </div>
       </div>
     </div>
-
+<!--
     <div class="untree_co-section testimonial-wrap">
       <div class="container">
         <div class="row mb-5">
           <div class="col-lg-7 text-center mx-auto">
             <h2 class="section-heading gsap-reveal-hero mb-0"><strong>Testimonials</strong></h2>
-            <p class="gsap-reveal-hero">What clients say...</p>
+            <p class="gsap-reveal-hero">Recommendations</p>
 
             <div class="wave gsap-reveal-hero" >
               <svg>
@@ -487,62 +487,23 @@
               <div class="testimonial-v1">
                 <img src="images/person_1.jpg" alt="Image" class="img-fluid">
                 <div class="mb-4">
-                  <h3>James Smith</h3>
-                  <span class="caption">CEO &amp; Co-Founder</span>
+                  <h3>Nom</h3>
+                  <span class="caption">Role ou entreprise</span>
                 </div>
                 <blockquote>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                  <p>Texte de reco ici</p>
                 </blockquote>
               </div>
             </div>
-            <!-- END .item -->
+        
 
-            <div class="item">
-              <div class="testimonial-v1">
-                <img src="images/person_2.jpg" alt="Image" class="img-fluid">
-                <div class="mb-4">
-                  <h3>Jenny Wilson</h3>
-                  <span class="caption">CEO &amp; Co-Founder</span>
-                </div>
-                <blockquote>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                </blockquote>
-              </div>
-            </div>
-            <!-- END .item -->
+  
 
-            <div class="item">
-              <div class="testimonial-v1">
-                <img src="images/person_3.jpg" alt="Image" class="img-fluid">
-                <div class="mb-4">
-                  <h3>Dan Anderson</h3>
-                  <span class="caption">CEO &amp; Co-Founder</span>
-                </div>
-                <blockquote>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                </blockquote>
-              </div>
-            </div>
-            <!-- END .item -->
-
-            <div class="item">
-              <div class="testimonial-v1">
-                <img src="images/person_1.jpg" alt="Image" class="img-fluid">
-                <div class="mb-4">
-                  <h3>James Smith</h3>
-                  <span class="caption">CEO &amp; Co-Founder</span>
-                </div>
-                <blockquote>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                </blockquote>
-              </div>
-            </div>
-            <!-- END .item -->
           </div>
         </div>
       </div>
     </div>
-
+-->
     <div class="untree_co-section">
       <div class="container">
         <div class="row mb-5">
@@ -598,7 +559,7 @@
       </div>
     </div>
 
-
+  
     <div class="untree_co-section" id="contact-section">
       <div class="container">
         <div class="row mb-5">
