--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
     <div class="container">
       <div class="row justify-content-center text-center">
         <div class="col-md-7">
-          <h1 class="heading gsap-reveal-hero mb-3"><strong>Des chiffres clairs. <span class="text-primary">.</span>Des histoires qui marquent.</strong></h1>
+          <h1 class="heading gsap-reveal-hero mb-3"><strong>Des chiffres parlants<span class="text-primary">.</span>Des visuels percutants<span class="text-primary">.</span> </strong></h1>
           <h2 class="subheading gsap-reveal-hero mb-4">
-            Quelques examples de mes projets d'analyse et de visualisation de données. <strong></strong>
+            Quelques exemples de mes projets d'analyse et de visualisation de données. <strong></strong>
           </h2>
          <!--  <p class="gsap-reveal-hero"><a href="https://untree.co/" target="_blank" class="btn btn-outline-black">More free templates here</a></p>   -->
         </div>
