--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="container">
       <div class="row justify-content-center text-center">
         <div class="col-md-7">
-          <h1 class="heading gsap-reveal-hero mb-3"><strong>Chiffres parlants<span class="text-primary">.</span>Des visuels percutants</strong></h1>
+          <h1 class="heading gsap-reveal-hero mb-3"><strong>Chiffres parlants<span class="text-primary">.</span> Visuels percutants</strong></h1>
           <h2 class="subheading gsap-reveal-hero mb-4">
             Quelques exemples de mes projets d'analyse et de visualisation de données. <strong></strong>
           </h2>
