--- a/portfolio-single-1.html
+++ b/portfolio-single-1.html
@@ -135,7 +135,21 @@
               <p>Analyse des données avec SQL et préparation d'un tableau de bord dynamique avec PowerBI</p>
             </div>
             <div class="col-md-6">
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+              <p>
+               <stong> Contexte : </strong>
+Toys and Models, acteur mondial de la miniature avec plus de 1 000 modèles et une présence dans 27 pays, a sollicité Datalis pour optimiser sa performance opérationnelle. L’objectif était de concevoir des tableaux de bord dynamiques en temps réel, couvrant les fonctions Commerciale, Financière, Logistique et Ressources Humaines.
+Aspects techniques :
+
+Gestion de base de données : Utilisation de MySQL Workbench pour structurer et interroger les données.
+Visualisation : Développement de dashboards interactifs sous Power BI, intégrant des KPI clés (chiffre d’affaires, marge brute, taux de retour client, etc.).
+Mapping des données : Fichier Excel dédié pour assurer la cohérence et la traçabilité des indicateurs.
+Gestion de projet : Méthodologie Scrum (sprints de 2 semaines), avec suivi via Trello.
+
+Résultats obtenus :
+
+Centralisation des données : Vision unifiée des performances par région, produit et équipe commerciale.
+Alertes stratégiques : Identification de dépendances clients, saisonnalité des ventes, et optimisation des stocks.
+Amélioration continue : Recommandations pour affiner les KPI (ex : taux de rotation des stocks, suivi des clients dormants).</p>
             </div>
           </div>
 
