--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
       <div class="container">
         <div class="row justify-content-center mb-3">
           <div class="col-lg-7 mx-auto text-center author-wrap">
-            <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded-circle mb-3">
+            <img src="images/krisztina.jpeg" alt="Image" class="img-fluid rounded-circle mb-3">
             <h3 class="text-black h5 font-weight-bold mb-2 gsap-reveal-hero">Krisztina Bernard</h3>
             <p class="gsap-reveal-hero">Data Analyste</p>
           </div>
