--- a/portfolio-single-1.html
+++ b/portfolio-single-1.html
@@ -132,15 +132,15 @@
               </div>
             </div>
             <div class="col-md-6">
-              <p>               <strong> Objectif </strong>
+              <p>               <strong> Objectif </strong><br/>
 à Datalis la mission d’optimiser sa performance opérationnelle via des tableaux de bord dynamiques pour ses fonctions Commercial, Finance, Logistique et RH.<br/>
-             <strong> Réalisations techniques :  </strong>
-Le projet a impliqué la conception d’une solution complète : modélisation des données avec MySQL Workbench, développement de dashboards interactifs sous Power BI (KPI clés, analyses par région et produit), et gestion agile en sprints de 2 semaines via Trello. Les données ont été cartographiées et validées via un fichier Excel dédié, permettant une visualisation en temps réel des performances.<br/>
+             <strong> Réalisations techniques :  </strong><br/>
+Le projet a impliqué la conception d’une solution complète : modélisation des données avec MySQL Workbench, développement de dashboards interactifs sous Power BI (KPI clés, analyses par région et produit), et gestion agile en sprints de 2 semaines via Trello.<br/>
 </p>
             </div>
             <div class="col-md-6">
               <p>
-<strong> Impact </strong>
+<strong> Impact </strong><br/>
 Les outils déployés offrent une vision unifiée des ventes, marges, stocks et performances commerciales, tout en identifiant des leviers d’amélioration comme la saisonnalité, la dépendance client ou la rotation des stocks.</p>
             </div>
           </div>
